...
    </string-array>
    <string-array name="graphs_array">
        <item>Workout 1</item>
        <item>Workout 2</item>
        <item>Workout 3</item>
    </string-array>
    <string name="workoutSelection">Select your workout type:</string>
    <string name="lbLabel">Heartrate Lower Bound:</string>
    <string name="ubLabel">Heartrate Upper Bound:</string>
    <string name="beginWorkoutBtn">Apply</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="failedLogin">Incorrect Login Information</string>
    <string name="passwordTooSmall">Password entered must be 6 or more characters</string>
    <string name="passwordEmpty">Must enter a password</string>
    <string name="emailEmpty">Must enter an email address</string>
    <string name="registrationFailed">Registration has failed, please check for valid email, or email is not already in use.</string>
    <string name="coachEmailDNE">"Coach email does not exist in database"</string>
    <string name="userNotACoach">"The coach email specified is not a coach, please type a new coach email"</string>
    <string name="coachHasAthelete">"The coach email specified is already assigned to an athelete, plaese type a new coach email</string>
    <string name="coachMessageSentSuccess">"The message was sent successfully"</string>

...
