...
        android:layout_width="93dp"
        android:layout_height="86dp"
        android:text="00"
        android:textSize="80sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/Stop"
        android:layout_marginTop="5dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintLeft_toRightOf="@+id/Stop" />

    <TextView
...
        android:id="@+id/Stop"
        android:layout_width="127dp"
        android:layout_height="0dp"
        android:text="@string/finish"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/Start"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/Start"
...
