...
        android:layout_height="wrap_content"
        android:onClick="toGraphs"
        android:text="Graphs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutBtn"
        app:layout_constraintVertical_bias="0.06"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />


    <Button
...
